<?xml version="1.0" encoding="utf-8"?>
<Linear xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.finalchallengeproject.MainActivity">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <RelativeLayout
        android:id="@+id/blockOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:paddingTop="20dp"
        >
        <ImageView
            android:id="@+id/russiaFlag"
            android:layout_width="87dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/russia_flag"/>
        <ImageView
            android:id="@+id/britainFlag"
            android:layout_width="87dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/russiaFlag"
            android:src="@drawable/britain_flag" />
    </RelativeLayout>
        <RelativeLayout
            android:id="@+id/blockTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/blockOne"
            android:paddingTop="20dp"
            android:paddingLeft="8dp">
        <TextView
            android:id="@+id/quizQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="24sp"
            android:textColor="#000"
            android:gravity="center_horizontal"
            android:text="@string/quizQuestion" />
        <RadioGroup
            android:id="@+id/radioGroupOne"
            android:layout_below="@+id/questionOne"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                android:id="@+id/answerOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/questionOne"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="5dp"
                android:textSize="16sp"
                android:text="@string/answer1"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:id="@+id/answerTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:text="@string/answer2"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:id="@+id/answerThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2dp"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:text="@string/answer3"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:id="@+id/answerFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="4dp"
                android:textSize="16sp"
                android:text="@string/answer4"
                android:onClick="onRadioButtonClicked"
                />
        </RadioGroup>
        <Button
            android:id="@+id/submitOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:onClick="submitAnswer"
           />

</LinearLayout>
